--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,27 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dbAlert
+spring.datasource.url=jdbc:mysql://localhost:3306/DBalert_V2
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+log.drop.path=/opt/ftp/uploads
+
+server.address=0.0.0.0
+server.port=8080
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mahdiessakhi@gmail.com
+spring.mail.password=fnbl fyct qhon urme
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=sitaalert
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=springboot
+
