--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-log.drop.path=/opt/ftp/uploads
+#log.drop.path=/home/mehdi/projectINTERN/logdropplace
+log.drop.path=/app/uploads
 
 server.address=0.0.0.0
 server.port=8080
